--- a/example.yml
+++ b/example.yml
@@ -80,7 +80,9 @@
           - { type: "host", database: "replication", user: "{{ repmgr_user }}", address: "127.0.0.1/32", method: "trust" }  
           - { type: "host", database: "{{ repmgr_database }}", user: "{{ repmgr_user }}", address: "127.0.0.1/32", method: "trust" }  
           - { type: "host", database: "{{ repmgr_database }}", user: "{{ repmgr_user }}", address: "192.168.56.0/24", method: "trust" }  
+          - { type: "host", database: "all", user: "postgres", address: "192.168.56.0/24", method: "trust" }
           - { type: "host", database: "testdb", user: "all", address: "192.168.56.0/24", method: "md5" }
+
         # Databases
         postgresql_databases:
           - name: "{{ repmgr_database }}"
