--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
-- include_vars: "{{ item }}"
+- name: Load OS-specific variables
+  include_vars: "{{ item }}"
   with_first_found:
     - "../vars/{{ ansible_distribution_release }}.yml"
     - "../vars/empty.yml"
