--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -30,5 +30,6 @@
         regexp: '.*{{ item }}$'
         line: "{{ hostvars[item].ansible_eth1.ipv4.address }} {{ item }}"
         state: present
+        mode: preserve
       when: hostvars[item].ansible_eth1.ipv4.address is defined
       loop: "{{ groups[repmgr_target_group] }}"
