--- a/tasks/install_apt.yml
+++ b/tasks/install_apt.yml
@@ -23,6 +23,7 @@
   template:
     src: etc_apt_preferences.d_apt_postgresql_org_pub_repos_apt.pref.j2
     dest: /etc/apt/preferences.d/apt_postgresql_org_pub_repos_apt.pref
+    mode: 0640
   when: postgresql_apt_pin_priority and postgresql_install_repository
 
 - name: PostgreSQL | Make sure the dependencies are installed | apt
