--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-ansible>=2.10
-molecule==3.0.8
-molecule-vagrant==0.3
+ansible>=2.10.7,<2.11.0
+molecule==3.2.0
+molecule-vagrant==0.6.1
+ansible-lint==4.3.7
+yamllint==1.26.0
 python-vagrant
-ansible-lint
-yamllint
 docker
 docker-compose
 netaddr
@@ -11,3 +11,4 @@ dnspython
 cryptography
 jsondiff
 pyyaml
+pyOpenSSL
