--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
   global:
     - VAGRANT_DEFAULT_PROVIDER=libvirt
     - ROLE_PATH=$TRAVIS_BUILD_DIR
+    - PY_COLORS=1
   jobs:
     - MOLECULE_DISTRO: generic/ubuntu1804
     - MOLECULE_DISTRO: generic/debian10
