Fix symlink name for proper deactivation

--- a/tasks/install_apt.yml
+++ b/tasks/install_apt.yml
@@ -56,7 +56,7 @@
 - name: PostgreSQL | Ensure systemd unit is disabled
   shell:
     cmd: |
-      systemctl disable "postgresql@{{ postgresql_version }}-{{ postgresql_cluster_name }}"
+      systemctl disable postgresql
     executable: /bin/bash
     warn: no
 
