--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ before_install:
     sudo apt-get update && sudo apt-get install -y ca-certificates curl gcc iproute2 pwgen python3 python3-dev sudo
     curl -skL https://bootstrap.pypa.io/get-pip.py | sudo -H python3
     sudo -H pip3 install --upgrade --ignore-installed --requirement requirements.txt
+    sudo ansible-galaxy collection install community.crypto
 
 script:
   - |
