--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -9,6 +9,7 @@
       debug:
         msg:
           "ansible_python_version": "{{ ansible_python_version }}"
+          "ansible_version.full": "{{ ansible_version.full }}"
           "postgresql_version": "{{ postgresql_version }}"
           "repmgr_master": "{{ repmgr_master }}"
           "repmgr_target_group": "{{ repmgr_target_group }}"
