--- a/tasks/extensions/configure_repmgr.yml
+++ b/tasks/extensions/configure_repmgr.yml
@@ -58,8 +58,8 @@
 
 - name: Repmgr | Generate an SSH keypair locally
   community.crypto.openssh_keypair:
-    path: /tmp/postgres_id_rsa
-    backend: "{{ 'auto' if ansible_version.full is version ('4', '>=') else omit }}" # Backward-compatible usage with ansible 2.x
+    path: "{{ lookup('config','DEFAULT_LOCAL_TMP') | dirname }}/postgres_id_rsa"
+    backend: cryptography
     regenerate: partial_idempotence
     size: "{{ repmgr_ssh_key_bits }}"
     type: "{{ repmgr_ssh_key_type }}"
@@ -70,7 +70,11 @@
 
 - name: Repmgr | Fetch pubkey content
   set_fact:
-    pubkey_content: "{{ lookup('file', '/tmp/postgres_id_rsa.pub') }}"
+    pubkey_content: "
+      {{ lookup(
+        'file',
+        lookup('config','DEFAULT_LOCAL_TMP') | dirname + '/postgres_id_rsa.pub'
+      ) }}"
   become: no
 
 - name: Repmgr | Update authorized_keys on all nodes
@@ -81,7 +85,7 @@
 
 - name: Repmgr | Upload private key on all nodes
   copy:
-    src: /tmp/postgres_id_rsa
+    src: "{{ lookup('config','DEFAULT_LOCAL_TMP') | dirname }}/postgres_id_rsa"
     dest: "{{ repmgr_private_key_path }}"
     owner: "{{ postgresql_service_user }}"
     group: "{{ postgresql_service_group }}"
