--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -13,7 +13,7 @@ driver:
     name: libvirt
 platforms:
   - name: pgsql01
-    box: ${MOLECULE_DISTRO:-"generic/debian10"}
+    box: ${MOLECULE_DISTRO:-"generic/debian11"}
     groups: 
       - pgcluster
     config_options:
@@ -27,7 +27,7 @@ platforms:
         ip: 192.168.30.2
         auto_config: true
   - name: pgsql02
-    box: ${MOLECULE_DISTRO:-"generic/debian10"}
+    box: ${MOLECULE_DISTRO:-"generic/debian11"}
     config_options:
       ssh.keep_alive: yes
       ssh.remote_user: "'vagrant'"
@@ -61,7 +61,7 @@ provisioner:
   inventory:
     group_vars:
       pgcluster: 
-        postgresql_version: 12
+        postgresql_version: ${POSTGRESQL_VERSION:-"13"}
         postgresql_port: 5432
         repmgr_master: pgsql01
         repmgr_target_group: pgcluster
