--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -11,6 +11,7 @@
           "ansible_python_version": "{{ ansible_python_version }}"
           "ansible_version.full": "{{ ansible_version.full }}"
           "postgresql_version": "{{ postgresql_version }}"
+          "repmgr_version": "{{ repmgr_version }}"
           "repmgr_master": "{{ repmgr_master }}"
           "repmgr_target_group": "{{ repmgr_target_group }}"
           "repmgr_node_id": "{{ repmgr_node_id }}"
