--- a/defaults/main/002-repmgr.yml
+++ b/defaults/main/002-repmgr.yml
@@ -4,7 +4,7 @@ repmgr_target_group: ""
 repmgr_user: repmgr
 repmgr_password: repmgr
 repmgr_database: repmgr
-repmgr_conninfo: "host={{ ansible_hostname }} user={{ repmgr_user }} dbname={{ repmgr_database }} connect_timeout=2"
+repmgr_conninfo: "host={{ ansible_nodename }} user={{ repmgr_user }} dbname={{ repmgr_database }} connect_timeout=2"
 repmgr_data_directory: "{{ postgresql_data_directory }}"
 repmgr_version: 5.3
 
