--- a/tasks/extensions.yml
+++ b/tasks/extensions.yml
@@ -5,5 +5,7 @@
   when: postgresql_ext_install_dev_headers
 - import_tasks: extensions/postgis.yml
   when: postgresql_ext_install_postgis
+- import_tasks: extensions/timescaledb.yml
+  when: postgresql_ext_install_timescaledb
 - import_tasks: extensions/repmgr.yml
   when: postgresql_ext_install_repmgr and ansible_service_mgr == 'systemd'
