--- a/defaults/main/001-postgresql.yml
+++ b/defaults/main/001-postgresql.yml
@@ -39,12 +39,19 @@ postgresql_ext_install_contrib: no
 postgresql_ext_install_dev_headers: no
 postgresql_ext_install_postgis: no
 postgresql_ext_install_repmgr: no
+postgresql_ext_install_timescaledb: no
 
 postgresql_ext_postgis_version: "2.5" # be careful: check whether the postgresql/postgis versions work together
 postgresql_ext_postgis_deps:
   - libgeos-c1
   - "postgresql-{{ postgresql_version }}-postgis-{{ postgresql_ext_postgis_version }}"
   - "postgresql-{{ postgresql_version }}-postgis-scripts"
+
+# TimescaleDB
+timescaledb_apt_key_id: "47F24417"
+timescaledb_apt_key_url: "https://packagecloud.io/timescale/timescaledb/gpgkey"
+timescaledb_apt_repository: "deb https://packagecloud.io/timescale/timescaledb/debian/ {{ ansible_distribution_release }} main"
+timescaledb_version: "2.6.1"
 
 # Foreign Data Wrapper(s)
 postgresql_fdw_mysql: no
