--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -136,7 +136,7 @@
     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} reload
     executable: /bin/bash
   become_user: "{{ postgresql_service_user }}"
-  when: postgresql_configuration_pt1.changed or postgresql_configuration_pt2.changed or postgresql_configuration_pt3.changed or postgresql_systemd_custom_conf.changed
+  when: postgresql_configuration_pt1.exists and postgresql_configuration_pt1.changed or postgresql_configuration_pt2.exists and postgresql_configuration_pt2.changed or postgresql_configuration_pt3.exists and postgresql_configuration_pt3.changed or postgresql_systemd_custom_conf.changed
 
 - name: PostgreSQL | Restart service
   shell: 
