--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -136,13 +136,13 @@
     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} reload
     executable: /bin/bash
   become_user: "{{ postgresql_service_user }}"
-  when: postgresql_configuration_pt1.exists and postgresql_configuration_pt1.changed or postgresql_configuration_pt2.exists and postgresql_configuration_pt2.changed or postgresql_configuration_pt3.exists and postgresql_configuration_pt3.changed or postgresql_systemd_custom_conf.changed
+  when: postgresql_configuration_pt1 is defined or postgresql_configuration_pt2 is defined or postgresql_configuration_pt3 is defined or postgresql_systemd_custom_conf is defined
 
 - name: PostgreSQL | Restart service
   shell: 
     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} restart
     executable: /bin/bash
   become_user: "{{ postgresql_service_user }}"
-  when: postgresql_configuration_pt2.changed
+  when: postgresql_configuration_pt2 is defined
   register: postgresql_restart
   failed_when: postgresql_restart.rc not in [0, 2] # handle already-running return codes
