--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -143,6 +143,6 @@
     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} restart
     executable: /bin/bash
   become_user: "{{ postgresql_service_user }}"
-  when: postgresql_configuration_pt2 is defined
+  when: postgresql_configuration_pt2 is defined and postgresql_configuration_pt2.changed
   register: postgresql_restart
   failed_when: postgresql_restart.rc not in [0, 2] # handle already-running return codes
