--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -129,6 +129,15 @@
     group: "{{ postgresql_service_group }}"
     mode: u=rwX,g=rwXs,o=rx
 
+- name: PostgreSQL | Ensure PostgreSQL is running
+  shell: 
+    cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} start
+    executable: /bin/bash
+  become_user: "{{ postgresql_service_user }}"
+  when: postgresql_configuration_pt1 is defined or postgresql_configuration_pt2 is defined or postgresql_configuration_pt3 is defined or postgresql_systemd_custom_conf is defined
+  register: postgresql_start
+  failed_when: postgresql_start.rc not in [0, 2] # handle already-running return codes
+
 - name: PostgreSQL | Reload all conf files
   shell: 
     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} reload
