--- a/defaults/main/001-postgresql.yml
+++ b/defaults/main/001-postgresql.yml
@@ -40,6 +40,7 @@ postgresql_ext_install_dev_headers: no
 postgresql_ext_install_postgis: no
 postgresql_ext_install_repmgr: no
 postgresql_ext_install_timescaledb: no
+postgresql_ext_install_pg_stat_statements: no
 
 postgresql_ext_postgis_version: "2.5" # be careful: check whether the postgresql/postgis versions work together
 postgresql_ext_postgis_deps:
@@ -96,6 +97,7 @@ postgresql_pg_ident:
     mapname: "root_as_{{ postgresql_admin_user }}"
     system_username: "{{ postgresql_admin_user }}"
     pg_username: "{{ postgresql_admin_user }}"
+
 # postgresql.conf
 
 #------------------------------------------------------------------------------
