--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -133,8 +133,9 @@
   shell: 
     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} start
     executable: /bin/bash
+  become: yes
   become_user: "{{ postgresql_service_user }}"
-  when: postgresql_configuration_pt1 is defined or postgresql_configuration_pt2 is defined or postgresql_configuration_pt3 is defined or postgresql_systemd_custom_conf is defined
+  when: postgresql_configuration_pt1 is defined and postgresql_configuration_pt1.changed or postgresql_configuration_pt2 is defined and postgresql_configuration_pt2.changed or postgresql_configuration_pt3 is defined and postgresql_configuration_pt3.changed or postgresql_systemd_custom_conf is defined
   register: postgresql_start
   failed_when: postgresql_start.rc not in [0, 2] # handle already-running return codes
 
@@ -142,8 +143,9 @@
   shell: 
     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} reload
     executable: /bin/bash
+  become: yes
   become_user: "{{ postgresql_service_user }}"
-  when: postgresql_configuration_pt1 is defined or postgresql_configuration_pt2 is defined or postgresql_configuration_pt3 is defined or postgresql_systemd_custom_conf is defined
+  when: postgresql_configuration_pt1 is defined and postgresql_configuration_pt1.changed or postgresql_configuration_pt2 is defined and postgresql_configuration_pt2.changed or postgresql_configuration_pt3 is defined and postgresql_configuration_pt3.changed or postgresql_systemd_custom_conf is defined
 
 - name: PostgreSQL | Restart service
   shell: 
