--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -151,6 +151,7 @@
   shell: 
     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} restart
     executable: /bin/bash
+  become: yes
   become_user: "{{ postgresql_service_user }}"
   when: postgresql_configuration_pt2 is defined and postgresql_configuration_pt2.changed
   register: postgresql_restart
