--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -3,7 +3,7 @@
   shell: 
     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} start
     executable: /bin/bash
-  become_user: "root"
+  become_user: "{{ postgresql_admin_user }}"
   become: yes
   register: postgresql_restart
   failed_when: postgresql_restart.rc not in [0, 2] # handle already-running return codes
