revert and run task as root

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -53,7 +53,7 @@
 - name: PostgreSQL | Reset the cluster - drop the existing one | Debian
   shell: pg_dropcluster {{ postgresql_version }} {{ postgresql_cluster_name }}
   become: yes
-  become_user: "{{ postgresql_admin_user }}"
+  become_user: "root"
   when: ansible_os_family == "Debian" and postgresql_cluster_reset
   ignore_errors: yes
 
